// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-reported-subjects returns all subjects that were actioned on the caller's account 1`] = `
Object {
  "cursor": "1728643815582::31",
  "subjects": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "modAction": "tools.ozone.history.defs#modActionPending",
      "status": "",
      "subject": "record(0)",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "modAction": "tools.ozone.history.defs#modActionPending",
      "status": "",
      "subject": "user(0)",
    },
  ],
}
`;

exports[`get-reported-subjects returns all subjects that were actioned on the caller's account 2`] = `
Object {
  "cursor": "1728643815611::33",
  "subjects": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "modAction": "tools.ozone.history.defs#modActionPending",
      "status": "",
      "subject": "record(0)",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "modAction": "tools.ozone.history.defs#modActionPending",
      "status": "",
      "subject": "record(0)",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "modAction": "tools.ozone.history.defs#modActionPending",
      "status": "",
      "subject": "user(0)",
    },
  ],
}
`;
